Fixed compare window clipping right side of screen Fixed bar charts being cut off on countries with long names Fixed drop down selection cutting off text

--- a/Final Project/style.css
+++ b/Final Project/style.css
@@ -79,7 +79,7 @@ div.myDataTable
     color: #444;
     line-height: 1.3;
     padding: .22em 1.4em .5em .8em;
-    width: 10%;
+    width: 13em;
     box-sizing: border-box;
     border: 1px solid #aaa;
     box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
@@ -146,6 +146,10 @@ div.myDataTable
     height: 550px;
     width: 900px;
     cursor: pointer;
+}
+
+.compare-country-entry {
+    max-width: 110px;
 }
 
 .map-wrapper {
